<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_open_chat"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_open_chat_window"/>
    <item
        android:id="@+id/action_set_custom_photo"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_set_custom_photo"/>
    <item
        android:id="@+id/action_clear_custom_photo"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_clear_custom_photo"/>
    <item
        android:id="@+id/action_set_custom_name"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/action_set_custom_name"/>
    <item
        android:id="@+id/action_clear_custom_name"
        android:orderInCategory="700"
        android:showAsAction="never"
        android:title="@string/action_clear_custom_name"/>

</menu>