<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_android_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_android_settings"/>
    <item
        android:id="@+id/action_ovaphone_user_settings"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_ovaphone_user_settings"/>
    <!-- <item -->
    <!-- android:id="@+id/action_login_to_skype" -->
    <!-- android:orderInCategory="300" -->
    <!-- android:showAsAction="never" -->
    <!-- android:title="@string/action_login_to_skype"/> -->
    <item
        android:id="@+id/action_launch_skype_test_call"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_skype_test_call"/>
    <item
        android:id="@+id/action_sync_skype_contacts"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_sync_skype_contacts"/>
    <item
        android:id="@+id/action_logout_of_skype"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/action_logout_of_skype"/>

</menu>